// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/db/makeFileToQuadArPipeline 01 1`] = `
Array [
  Array [
    "one",
    "two",
    "three",
    "four",
  ],
  Array [
    "one",
    "two2",
    "three",
    "four",
  ],
]
`;

exports[`lib/riw/db/makeFileToQuadArPipeline 02 1`] = `
Array [
  Array [
    "one",
    "two",
    "bar",
    "db.json",
  ],
]
`;
